--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
 		"vue": "latest"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.9.2"
+		"@biomejs/biome": "1.9.2",
+		"@flydotio/dockerfile": "^0.5.8"
 	}
 }
