--- a/.github/workflows/integrate-frontend.yaml
+++ b/.github/workflows/integrate-frontend.yaml
@@ -1,15 +1,7 @@
 name: Integrate (frontend)
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - 'frontend/**'
-  pull_request:
-    paths:
-      - 'frontend/**'
-  workflow_dispatch:
+  workflow_call:
 
 defaults:
   run:
