--- a/.github/workflows/deploy-backend.yaml
+++ b/.github/workflows/deploy-backend.yaml
@@ -25,4 +25,4 @@ jobs:
       - name: Stage secrets for next deployment
         run: sops decrypt .env | fly secrets import
       - name: Deploy backend
-        run: flyctl deploy --remote-only
+        run: fly deploy --remote-only
