--- a/.github/workflows/deploy-frontend.yaml
+++ b/.github/workflows/deploy-frontend.yaml
@@ -23,6 +23,6 @@ jobs:
       - name: Setup SOPS
         uses: nhedger/setup-sops@v2
       - name: Stage secrets for next deployment
-        run: sops decrypt .env.enc | fly secrets import
+        run: sops decrypt .env.enc | flyctl secrets import
       - name: Deploy frontend
-        run: fly deploy --remote-only
+        run: flyctl deploy --remote-only
