--- a/.github/workflows/deploy-backend.yaml
+++ b/.github/workflows/deploy-backend.yaml
@@ -23,6 +23,6 @@ jobs:
       - name: Setup SOPS
         uses: nhedger/setup-sops@v2
       - name: Stage secrets for next deployment
-        run: sops decrypt .env | flyctl secrets import
+        run: sops decrypt .env.enc | flyctl secrets import
       - name: Deploy backend
         run: flyctl deploy --remote-only
