--- a/.github/workflows/deploy-frontend.yaml
+++ b/.github/workflows/deploy-frontend.yaml
@@ -23,6 +23,6 @@ jobs:
       - name: Setup SOPS
         uses: nhedger/setup-sops@v2
       - name: Stage secrets for next deployment
-        run: sops decrypt --input-type dotenv --output-type dotenv .env.enc | flyctl secrets import --stage
+        run: sops decrypt secrets.env | flyctl secrets import --stage
       - name: Deploy frontend
         run: flyctl deploy --remote-only
