--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -5,7 +5,7 @@
 
 app = 'offizen-api'
 primary_region = 'cdg'
-console_command = 'php /var/www/html/artisan tinker'
+console_command = 'php /app/artisan tinker'
 
 [build]
 [build.args]
@@ -13,15 +13,14 @@ NODE_VERSION = '18'
 PHP_VERSION = '8.2'
 
 [deploy]
-release_command = "php /var/www/html/artisan migrate --force"
+release_command = "php /app/artisan migrate --force"
 
 [env]
 APP_ENV = 'production'
 LOG_CHANNEL = 'stderr'
 LOG_LEVEL = 'info'
 LOG_STDERR_FORMATTER = 'Monolog\Formatter\JsonFormatter'
-SESSION_DRIVER = 'cookie'
-SESSION_SECURE_COOKIE = 'true'
+SESSION_DRIVER = 'database'
 
 [http_service]
 internal_port = 8080
