--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,10 @@ FROM dunglas/frankenphp:php8.3
 ENV SERVER_NAME=:80
 
 # Enable PHP production settings
-RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
+RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini" \
+ && composer install --no-dev --optimize-autoloader
+
+
 
 # Copy application code
 COPY . /app
