--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,14 +5,16 @@ ENV SERVER_NAME=:80
 WORKDIR /app
 
 # Enable PHP production settings
-RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini" \
- && composer install --no-dev --optimize-autoloader
+RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
 
 # Retrieve Composer
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
 # Copy application code
 COPY . /app
+
+# Install dependencies
+RUN composer install --no-dev --optimize-autoloader
 
 # Set permissions
 RUN chown -R www-data:www-data storage bootstrap/cache
